--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
     "express": "^4.15.2",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.8.1",
     "stripe": "^6.13.0"
   },
